--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -4,10 +4,10 @@ $mainFontFamily: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
 $mainFontWeight: 400;
 $mainLineHeight: 1.8em;
 $mainColor: #666;
-$lightInformationBackColor: #f4f4f4;
-$lightInformationColor: #666;
-$darkInformationBackColor: #282e34;
+$lightInformationBackColor: rgba(223, 219, 219,0.8);
+$lightInformationColor: rgb(95, 91, 91);
+$darkInformationBackColor: rgba(115, 126, 139,0.8);
 $darkInformationColor: #ddd;
 $imageContainerTextColor: #fff;
-$firstAndLastImageBackColor: rgb(31, 30, 30);
+$firstAndLastImageBackColor: rgba(24, 22, 22, 0.6);
 
