change font and background for mobile

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -10,3 +10,10 @@ body, html {
   color: $mainColor;
 
 }
+
+@media (max-width: 480px) {
+  body, html {
+    font-size: $mobileFontSize;
+    line-height: $mobuleLineHeight;
+  }
+}
