--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -10,4 +10,5 @@ $darkInformationBackColor: rgba(115, 126, 139,0.8);
 $darkInformationColor: #ddd;
 $imageContainerTextColor: #fff;
 $firstAndLastImageBackColor: rgba(24, 22, 22, 0.6);
-
+$mobileFontSize : 10px;
+$mobuleLineHeight: 1.2em;
