--- a/sass/_image.scss
+++ b/sass/_image.scss
@@ -22,10 +22,11 @@
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
-  font-size: 20px;
+  
 
   p {
     text-transform: none;
+    font-size: 1.5rem;
   }
 }
 
