--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@ body, html {
   color: #666;
 }
 
+@media (max-width: 480px) {
+  body, html {
+    font-size: 10px;
+    line-height: 1.2em;
+  }
+}
 .imagecontainer {
   position: relative;
   opacity: 0.75;
@@ -35,10 +41,10 @@ body, html {
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
-  font-size: 20px;
 }
 #special p {
   text-transform: none;
+  font-size: 1.5rem;
 }
 
 .image1 {
